# Test_For_Yalantis_School

./: README.md  db.sqlite3  dev.txt  manage.py  pyproject.toml  requirements.txt  setup.md
driver_app/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py
driver_app/fixtures/: db.json
driver_app/migrations/: 0001_initial.py
drivers/: asgi.py  settings.py  urls.py  wsgi.py
